           - Hash class with functions to calculate hashes
           - Base URL is automatically parsed from fileURL during init
  Changed : Upgraded Substance L&F to version 6.1 Final
  Changed : Removed redundant setting for automatic restart after plugin updates
  Changed : Speed limiter settings pane split in two to make clear a difference between global and file-specific settings

8th August 2010 - FreeRapid Downloader 0.85 Alpha 3
  Added : Plugin API
            - FileStreamRecognizer interface and accompanying methods for setting it
            - Added support for <input type="image"> in setActionFromForm methods in MethodBuilder
  Changed : It's not necessary to restart FRD after plugin updates anymore!
  Changed : SwingApplication framework (SAF) was updated to BetterSwingApplication framework (BSAF), which fixes some bugs
  Changed : "Confirm deleting files" dialog is truncated to 20 files to avoid overly tall dialog which overflows screen
  Fixed : Lots of exceptions in log in case a plugin dependency is missing
  Fixed : Proxy list not refreshing when changing the path to it in preferences dialog
  Fixed : Fails to startup if global speed limiter value is above 255
  Fixed : Empty temporary files are deleted if there isn't enough disk space for download

18th July 2010 - FreeRapid Downloader 0.85 Alpha 2
  Added : Enhanced clipboard monitoring support for URLs defined in reverse order eg.:
           http://www.agaleradodownload.com/download/d/?0PPJOQ2X=d?/moc.daolpuagem.www//:ptth
           http://www.zunay.com/d/?KKLZZ2OL=d?/moc.daolpuagem.www
  Added : new items in menu Options/Global speed limit, Help/Check for plugin statuses
  Added : plugin API
            - DownloadClientConsts class with constants for DownloadClient parameters
  Added :  New theme for JTattoo LookAndFeel - "Graphite"
  Changed : Removed obsolete entries for sorting downloads from dropdown menu, as the table can now be sorted by clicking the headings